# epics-relay

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  README.md  epics-relay.spec  genindex.html  index.html  intro.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  intro.doctree
_static/: documentation_options.js
ci/: Dockerfile-build-centos8  azure-pipelines.yml
cmake/: cpplint.cmake  systemdservice.cmake  version.cmake
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_static/: documentation_options.js
docs/doxygen/: CMakeLists.txt
docs/sphinx/: CMakeLists.txt  conf.py.in  index.rst  intro.md
docs_build/doxygen/: Doxyfile.in
docs_build/sphinx/: CMakeLists.txt  conf.py.in
src/: collector.c  collector.h  config.c  config.h  debug.h  defs.h.in  emitter.c  emitter.h  epics.c  epics.h  ethernet.c  ethernet.h  proto.h
systemd/: collector.service.in  emitter.service.in  epics-relay.conf  epics-relay.conf.in  epics-relay_default.conf.in  epics_udp_collector.service.in  epics_udp_collector@.service.in  epics_udp_emitter.service.in  epics_udp_emitter@.service.in
